--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-streamlit==1.25.0
-scikit_learn==1.3.0
-tensorflow==2.13.0
-pandas==2.0.3
-numpy==1.24.3
-joblib==1.3.2
+version https://git-lfs.github.com/spec/v1
+oid sha256:e44fce77277aaf8a788cccf86cf3ffda64f95ae18e786c82ed76b0c9f072716b
+size 103
